src/objects/Fielo_Venta__c.object
<CustomObject>
    <fields>
        <fullName>F_Cliente__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cliente</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Ventas</relationshipLabel>
        <relationshipName>Ventas</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>F_Descuento__c</fullName>
        <label>Descuento</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>F_EstacionDeServicio__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Estación de Servicio</label>
        <referenceTo>Ter_Estacion_de_Servicio__c</referenceTo>
        <relationshipLabel>Ventas</relationshipLabel>
        <relationshipName>Ventas</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>F_Estado__c</fullName>
        <label>Estado</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pendiente</fullName>
                    <default>true</default>
                    <label>Pendiente</label>
                </value>
                <value>
                    <fullName>Procesar</fullName>
                </value>
                <value>
                    <fullName>Aprobada</fullName>
                </value>
                <value>
                    <fullName>Rechazada</fullName>
                </value>
                <value>
                    <fullName>Reintentar</fullName>
                </value>
                <value>
                    <fullName>Revertida</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>F_FechaTransaccion__c</fullName>
        <label>Fecha de Transacción</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>F_IdPromotorCajero__c</fullName>
        <label>Id Promotor/Cajero</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>F_IdVenta__c</fullName>
        <label>Id Venta</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>F_Impuesto__c</fullName>
        <label>Impuesto</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>F_LiquidoFidelizable__c</fullName>
        <label>Líquido Fidelizable (Gal)</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>F_Member__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Member</label>
        <referenceTo>FieloPLT__Member__c</referenceTo>
        <relationshipLabel>Ventas</relationshipLabel>
        <relationshipName>Ventas</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>F_MontoFidelizableUSD__c</fullName>
        <label>Monto Fidelizable (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>F_MontoFidelizable__c</fullName>
        <label>Monto Fidelizable (COP)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>F_MontoNoFidelizables__c</fullName>
        <label>Monto Medios No Fidelizables</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>F_MontoTotal__c</fullName>
        <label>Monto Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>F_MotivoRechazo__c</fullName>
        <label>Motivo de Rechazo</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>F_OrigenVenta__c</fullName>
        <label>Origen Venta</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Estación de Servicio</fullName>
                </value>
                <value>
                    <fullName>Tienda</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>F_RuleTrigger__c</fullName>
        <label>Rule Trigger</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>F_Tienda__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tienda</label>
        <referenceTo>Ter_Negocio_Complementario__c</referenceTo>
        <relationshipLabel>Ventas</relationshipLabel>
        <relationshipName>Ventas</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>F_TipoCombustible__c</fullName>
        <label>Tipo de Combustible</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Corriente</fullName>
                </value>
                <value>
                    <fullName>Diesel</fullName>
                </value>
                <value>
                    <fullName>Extra</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>F_TipoTransaccion__c</fullName>
        <label>Tipo de Transacción</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Acumulación</fullName>
                </value>
                <value>
                    <fullName>Redención</fullName>
                </value>
                <value>
                    <fullName>Reversión</fullName>
                </value>
                <value>
                    <fullName>Reclamación</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>F_TipoVenta__c</fullName>
        <description>Este campo contiene el tipo de venta que se ha realizado para</description>
        <label>Tipo de Venta</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Líquidos</fullName>
                </value>
                <value>
                    <fullName>Canastilla</fullName>
                </value>
                <value>
                    <fullName>Tiendas</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>F_TransaccionProcesada__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indica si la transacción ya fue procesada</description>
        <label>Transacción Procesada</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>F_ValorAPagar__c</fullName>
        <label>Valor a Pagar</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Venta</label>
    <listViews>
        <fullName>Fielo_All</fullName>
        <columns>NAME</columns>
        <columns>F_IdVenta__c</columns>
        <columns>F_FechaTransaccion__c</columns>
        <columns>F_TipoTransaccion__c</columns>
        <columns>F_Estado__c</columns>
        <columns>F_Member__c</columns>
        <columns>F_OrigenVenta__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>F_EstacionDeServicio__c</columns>
        <columns>F_Tienda__c</columns>
        <columns>F_LiquidoFidelizable__c</columns>
        <columns>F_MontoFidelizableUSD__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>Todas</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Pendientes</fullName>
        <columns>NAME</columns>
        <columns>F_TipoTransaccion__c</columns>
        <columns>F_OrigenVenta__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>F_Estado__c</field>
            <operation>equals</operation>
            <value>Pendiente</value>
        </filters>
        <label>Pendientes</label>
    </listViews>
    <nameField>
        <displayFormat>V-{0000000000}</displayFormat>
        <label>Numero Venta</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Ventas</pluralLabel>
    <recordTypes>
        <fullName>Fielo_Liquido</fullName>
        <active>true</active>
        <label>Líquido</label>
    </recordTypes>
    <recordTypes>
        <fullName>Fielo_Tienda</fullName>
        <active>true</active>
        <label>Tienda</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>